добавлены бд, создание и получением item